--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="zxx">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>module-1</title>
+</head>
+
+<body>
+    <header>
+        <nav class="main-nav">
+            <ul class="main-menu">
+                <li class="main-menu-item">
+                    <a href="#lyfestyle" class="main-menu-link">lifestyle</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#photodiary" class="main-menu-link">photodiary</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">music</a>
+                </li>
+                <li class="main-menu-item">
+                    <a href="#" class="main-menu-link">travel</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article class="lyfestyle" id="lifestyle">
+            <section>
+                <img src="img/img1_festival.jpg" alt="img1_festival" width="421" height="279">
+                <p>Lifestyle</p>
+                <h2>More than just a music festival</h2>
+                <p>Lorem ipsumdolor sit amet consectetur adipisicing elit. Deseruntdistinctio qui, placeat nam
+                    consequuntur
+                    ullam accusamusnisi nostrum dolores numquamat, velit possimus doloremque earum obcaecati id porro
+                    reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis,
+                    quasi assumendareiciendis delectus quia est non, numquamofficiis repellat placeat nihil aperiam
+                    repellendussunt laudantiumad exercitationem in aliquid id, nemo nam totam. Ipsumdolore
+                    exercitationem,
+                    non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto,
+                    expedita
+                    laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
+                    nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
+            </section>
+            <section>
+                <img src="img/img2_coffee.jpg" alt="img2_coffee" width="421" height="279">
+                <p>lifestyle</p>
+                <h2>Life tastes better with coffee</h2>
+                <p>Lorem ipsumdolor sit amet consectetur adipisicing elit. Deseruntdistinctio qui, placeat nam
+                    consequuntur
+                    ullam accusamusnisi nostrum dolores numquamat, velit possimus doloremque earum obcaecati id porro
+                    reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis,
+                    quasi assumendareiciendis delectus quia est non, numquamofficiis repellat placeat nihil aperiam
+                    repellendussunt laudantiumad exercitationem in aliquid id, nemo nam totam. Ipsumdolore
+                    exercitationem,
+                    non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto,
+                    expedita
+                    laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
+                    nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
+            </section>
+        </article>
+        <article class="photodiary" id="photodiary">
+            <section>
+                <img src="img/img3_dream.jpg" alt="img3_dream" width="421" height="279">
+                <p>photodiary</p>
+                <h2>American dream</h2>
+                <p>Lorem ipsumdolor sit amet consectetur adipisicing elit. Deseruntdistinctio qui, placeat nam
+                    consequuntur
+                    ullam accusamusnisi nostrum dolores numquamat, velit possimus doloremque earum obcaecati id porro
+                    reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis,
+                    quasi assumendareiciendis delectus quia est non, numquamofficiis repellat placeat nihil aperiam
+                    repellendussunt laudantiumad exercitationem in aliquid id, nemo nam totam. Ipsumdolore
+                    exercitationem,
+                    non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto,
+                    expedita
+                    laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
+                    nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
+            </section>
+            <section>
+                <img src="img/img4_exploring.jpg" alt="img4_exploring" width="420" height="279">
+                <p>photodiary</p>
+                <h2>A day exploring the Alps</h2>
+                <p>Lorem ipsumdolor sit amet consectetur adipisicing elit. Deseruntdistinctio qui, placeat nam
+                    consequuntur
+                    ullam accusamusnisi nostrum dolores numquamat, velit possimus doloremque earum obcaecati id porro
+                    reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis,
+                    quasi assumendareiciendis delectus quia est non, numquamofficiis repellat placeat nihil aperiam
+                    repellendussunt laudantiumad exercitationem in aliquid id, nemo nam totam. Ipsumdolore
+                    exercitationem,
+                    non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto,
+                    expedita
+                    laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
+                    nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
+            </section>
+        </article>
+    </main>
+    <footer><button>load more</button></footer>
+</body>
+
+</html>
