--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -28,8 +28,8 @@
         </nav>
     </header>
     <main>
-        <article class="lyfestyle" id="lifestyle">
-            <section>
+        <section>
+            <article class="lyfestyle" id="lifestyle">
                 <img src="img/img1_festival.jpg" alt="img1_festival" width="421" height="279">
                 <p>Lifestyle</p>
                 <h2>More than just a music festival</h2>
@@ -44,8 +44,8 @@
                     expedita
                     laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
                     nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
-            </section>
-            <section>
+            </article>
+            <article class="lifestyle">
                 <img src="img/img2_coffee.jpg" alt="img2_coffee" width="421" height="279">
                 <p>lifestyle</p>
                 <h2>Life tastes better with coffee</h2>
@@ -60,10 +60,8 @@
                     expedita
                     laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
                     nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
-            </section>
-        </article>
-        <article class="photodiary" id="photodiary">
-            <section>
+            </article>
+            <article class="photodiary" id="photodiary">
                 <img src="img/img3_dream.jpg" alt="img3_dream" width="421" height="279">
                 <p>photodiary</p>
                 <h2>American dream</h2>
@@ -78,8 +76,8 @@
                     expedita
                     laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
                     nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
-            </section>
-            <section>
+            </article>
+            <article class="photodiary">
                 <img src="img/img4_exploring.jpg" alt="img4_exploring" width="420" height="279">
                 <p>photodiary</p>
                 <h2>A day exploring the Alps</h2>
@@ -94,10 +92,10 @@
                     expedita
                     laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
                     nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
-            </section>
-        </article>
+            </article>
+            <footer><button class="load more">load more</button></footer>
+        </section>
     </main>
-    <footer><button>load more</button></footer>
 </body>
 
 </html>
