fixed 1section 4article

--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -93,8 +93,8 @@
                     laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos
                     nam,nulla nobis magni quod doloremque repellendus molestiae?</p>
             </article>
-            <footer><button class="load more">load more</button></footer>
-        </section>
+            <button class="load more">load more</button>
+            </section>
     </main>
 </body>
 
