--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet">
     <title>module-3</title>
 </head>
 
@@ -16,7 +17,7 @@
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="#lyfestyle" class="main-menu-link">lifestyle</a>
+                    <a href="#lifestyle" class="main-menu-link">lifestyle</a>
                 </li>
                 <li class="main-menu-item">
                     <a href="#photodiary" class="main-menu-link">photodiary</a>
@@ -31,33 +32,54 @@
         </nav>
     </header>
     <main>
-        <section>
-            <article class="lyfestyle" id="lifestyle">
+        <section class="section">
+            <article class="lifestyle" id="lifestyle">
                 <img src="img/img1_festival.jpg" alt="img1_festival" width="421" height="279">
-                <p>Lifestyle</p>
-                <h2>More than just a music festival</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+                <p class="ubuntu">Lifestyle</p>
+                <p class="tittle">More than just a music festival</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
             <article class="lifestyle">
                 <img src="img/img2_coffee.jpg" alt="img2_coffee" width="421" height="279">
-                <p>lifestyle</p>
-                <h2>Life tastes better with coffee</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+                <p class="ubuntu">Lifestyle</p>
+                <p class="tittle">Life tastes better with coffee</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
             <article class="photodiary" id="photodiary">
                 <img src="img/img3_dream.jpg" alt="img3_dream" width="421" height="279">
-                <p>photodiary</p>
-                <h2>American dream</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+                <p class="ubuntu">Photodiary</p>
+                <p class="tittle">American dream</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
             <article class="photodiary">
                 <img src="img/img4_exploring.jpg" alt="img4_exploring" width="420" height="279">
-                <p>photodiary</p>
-                <h2>A day exploring the Alps</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+                <p class="ubuntu">Photodiary</p>
+                <p class="tittle">A day exploring the Alps</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+            </article>
+            <article class="lifestyle3">
+                <img src="img/img5_top.jpg" alt="img5_top" width="420" height="279">
+                <p class="ubuntu">Lifestyle</p>
+                <p class="tittle">Top 10 song for running</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </article>
+            <article class="lifestyle3">
+                <img src="img/img6_winter.jpg" alt="img6_winter" width="420" height="279">
+                <p class="ubuntu">Lifestyle</p>
+                <p class="tittle">Cold winter days</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             </article>
             <button class="load more">load more</button>
-            </section>
+        </section>
     </main>
 </body>
 
