--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -36,28 +36,28 @@
   <!--Cection with articles-->
         <section class="section">
             <h2 class="visually-hidden">Articles-list</h2>
-            <article class="lifestyle" id="lifestyle">
+            <article class="article" id="lifestyle">
                 <img src="img/img1_festival.jpg" alt="img1_festival" width="421" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">More than just a music festival</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
-            <article class="lifestyle">
+            <article class="article">
                 <img src="img/img2_coffee.jpg" alt="img2_coffee" width="421" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">Life tastes better with coffee</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
-            <article class="photodiary" id="photodiary">
+            <article class="article" id="photodiary">
                 <img src="img/img3_dream.jpg" alt="img3_dream" width="421" height="279">
                 <p class="ubuntu">Photodiary</p>
                 <h3 class="tittle">American dream</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
-            <article class="photodiary">
+            <article class="article">
                 <img src="img/img4_exploring.jpg" alt="img4_exploring" width="420" height="279">
                 <p class="ubuntu">Photodiary</p>
                 <h3 class="tittle">A day exploring the Alps</h3>
@@ -65,7 +65,7 @@
                     et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
-            <article class="lifestyle3">
+            <article class="article">
                 <img src="img/img5_top.jpg" alt="img5_top" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">Top 10 song for running</h3>
@@ -73,7 +73,7 @@
                     et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             </article>
-            <article class="lifestyle3">
+            <article class="article">
                 <img src="img/img6_winter.jpg" alt="img6_winter" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">Cold winter days</h3>
