try fix margin's 4px

--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -17,8 +17,8 @@
     <header>
         <nav class="main-nav container">
             <ul class="main-menu">
-                <li class="main-menu-item">
-                    <a href="#lifestyle" class="main-menu-link">Lifestyle</a>
+                <li class="main-menu-item-left">
+                    <a href="#lifestyle" class="main-menu-link-left">Lifestyle</a>
                 </li>
                 <li class="main-menu-item">
                     <a href="#photodiary" class="main-menu-link">Photodiary</a>
@@ -37,21 +37,21 @@
         <section class="section">
             <h2 class="visually-hidden">Articles-list</h2>
             <article class="article" id="lifestyle">
-                <img class="sectiom-image" src="img/img1_festival.jpg" alt="img1_festival" width="421" height="279">
+                <img class="sectiom-image" src="img/img1_festival.jpg" alt="img1_festival" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">More than just a music festival</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
             <article class="article">
-                <img class="sectiom-image" src="img/img2_coffee.jpg" alt="img2_coffee" width="421" height="279">
+                <img class="sectiom-image" src="img/img2_coffee.jpg" alt="img2_coffee" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">Life tastes better with coffee</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
             <article class="article" id="photodiary">
-                <img class="sectiom-image" src="img/img3_dream.jpg" alt="img3_dream" width="421" height="279">
+                <img class="sectiom-image" src="img/img3_dream.jpg" alt="img3_dream" width="420" height="279">
                 <p class="ubuntu">Photodiary</p>
                 <h3 class="tittle">American dream</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
