--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -36,13 +36,17 @@
   <!--Cection with articles-->
         <section class="section">
             <h2 class="visually-hidden">Articles-list</h2>
-            <article class="article" id="lifestyle">
+            <ul class="content-list">
+            <li class="content-item">
+                <article class="article" id="lifestyle">
                 <img class="sectiom-image" src="img/img1_festival.jpg" alt="img1_festival" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
                 <h3 class="tittle">More than just a music festival</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
+        </li>
+        <li class="content-item">
             <article class="article">
                 <img class="sectiom-image" src="img/img2_coffee.jpg" alt="img2_coffee" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
@@ -50,13 +54,17 @@
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
-            <article class="article" id="photodiary">
+        </li>
+        <li class="content-item">
+        <article class="article" id="photodiary">
                 <img class="sectiom-image" src="img/img3_dream.jpg" alt="img3_dream" width="420" height="279">
                 <p class="ubuntu">Photodiary</p>
                 <h3 class="tittle">American dream</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
+        </li>
+        <li class="content-item">
             <article class="article">
                 <img class="sectiom-image" src="img/img4_exploring.jpg" alt="img4_exploring" width="420" height="279">
                 <p class="ubuntu">Photodiary</p>
@@ -65,6 +73,8 @@
                     et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
             </article>
+        </li>
+        <li class="content-item">
             <article class="article">
                 <img class="sectiom-image" src="img/img5_top.jpg" alt="img5_top" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
@@ -73,6 +83,8 @@
                     et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             </article>
+        </li>
+        <li class="content-item">
             <article class="article">
                 <img class="sectiom-image" src="img/img6_winter.jpg" alt="img6_winter" width="420" height="279">
                 <p class="ubuntu">Lifestyle</p>
@@ -81,7 +93,9 @@
                     et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
             </article>
-            <button class="load-more">load more</button>
+        </li>
+        </ul>
+            <div class="button"><button class="load-more">Load more</button></div>
         </section>
     </main>
 </body>
