--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -14,11 +14,12 @@
 
 <body>
     <h1 class="visually-hidden">Our amazing pain and gain site</h1>
-    <header>
-        <nav class="main-nav container">
+    <div class="container">
+    <header class="header">
+        <nav class="main-nav">
             <ul class="main-menu">
-                <li class="main-menu-item-left">
-                    <a href="#lifestyle" class="main-menu-link-left">Lifestyle</a>
+                <li class="main-menu-item">
+                    <a href="#lifestyle" class="main-menu-link">Lifestyle</a>
                 </li>
                 <li class="main-menu-item">
                     <a href="#photodiary" class="main-menu-link">Photodiary</a>
@@ -32,7 +33,7 @@
             </ul>
         </nav>
     </header>
-    <main class="container">
+    <main>
   <!--Cection with articles-->
         <section class="section">
             <h2 class="visually-hidden">Articles-list</h2>
@@ -95,9 +96,10 @@
             </article>
         </li>
         </ul>
-            <div class="button"><button class="load-more">Load more</button></div>
+            <button class="load-more">Load more</button>
         </section>
     </main>
+</div>
 </body>
 
 </html>
