--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -14,10 +14,13 @@
 
 <body>
 <h1 class="visually-hidden">Our amazing pain and gain website</h1>
-    <header class="page-header">
-        <nav>
-            <li class="logo"><a href="#" class="site-logo">Mart</a></li>
-            <ul class="site-navigation">
+<div class="container">    
+<header class="page-header">
+        <nav class="clearfix">
+            
+            <li class="logo clearfix"><a href="#" class="site-logo">Mart</a></li>
+        
+            <ul class="site-navigation clearfix">
                 <li><a class="main-menu-link" href="#">Home</a></li>
                 <li><a class="main-menu-link" href="#">About Us</a></li>
                 <li><a class="main-menu-link" href="#">Page</a></li>
@@ -30,9 +33,9 @@
 
     <main>
 
-        <section class="products">
+        <section class="products clearfix">
             <h2 class="product-title">Featured Products</h2>
-            <ul class="product-list">
+            <ul class="product-list clearfix">
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
                     <p class="text">Blue Tshirt</p>
@@ -78,7 +81,7 @@
 
         <section class="news">
             <h2 class="news-title">Latest News</h2>
-            <ul class="news-list">
+            <ul class="news-list clearfix">
                 <li class="news-list-item">
                     <img class="news-list-image" src="img/img-9-pad.jpg" alt="pad" width="346" height="260">
                     <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
@@ -109,7 +112,7 @@
         </section>
 
     </main>
-
+</div>
 </body>
 
 </html>
