--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -123,7 +123,7 @@
                         <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate
                             cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                        <button class="read-more">ead More</button>
+                        <button class="read-more">Read More</button>
                     </li>
                 </ul>
             </section>
