--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -18,7 +18,7 @@
         <header class="page-header">
             <nav class="clearfix">
 
-                <li class="logo clearfix"><a href="#" class="site-logo">Mart</a></li>
+                <li class="logo"><a href="#" class="site-logo">Mart</a></li>
 
                 <ul class="site-navigation clearfix">
                     <li><a class="main-menu-link" href="#">Home</a></li>
