--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -17,9 +17,7 @@
     <div class="container">
         <header class="page-header">
             <nav class="clearfix">
-                <ul>
-                    <li class="logo"><a href="#" class="site-logo">Mart</a></li>
-                </ul>
+                <a href="#" class="logo">Mart</a>
                 <ul class="site-navigation clearfix">
                     <li><a class="main-menu-link" href="#">Home</a></li>
                     <li><a class="main-menu-link" href="#">About Us</a></li>
