--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <h1 class="visually-hidden">Our amazing pain and gain site</h1>
     <header class="header">
         <div class="container">
             <nav class="navigation">
